--- a/actions/set_eo_istio_role_binding.yaml
+++ b/actions/set_eo_istio_role_binding.yaml
@@ -12,3 +12,6 @@ parameters:
     istioRoleBinding:
         type: "object"
         required: true
+    append:
+        type: "boolean"
+        required: true
