--- a/delete/delete_eo.yaml
+++ b/delete/delete_eo.yaml
@@ -20,15 +20,30 @@ workflows:
           deployment: "environment-operator"
 
     tasks:
-      delete_pods:
-        action: kubernetes.k8saction
-        input:
-          api_group: CoreV1Api
-          action_name: delete_namespaced_pod
-          params:
-            namespace: <% $.namespace %>
-            name: "environment-operator"
-            body: {}
+#      get_all_namespaced_pods:
+#        action: kubernetes.k8saction
+#        input:
+#          api_group: CoreV1Api
+#          action_name: list_namespaced_pod
+#          params:
+#            namespace: <% $.namespace %>
+#        publish:
+#          namespaced_pod_list: <% regex("^environment-operator").match(task(get_all_namespaced_pods).result.result.items.select($.metadata.name)) %>
+#
+#      check_eo_pod_is_exist:
+#        action: bitesize.check_eo_pods
+#        input:
+#          pod_list: <% $.namespaced_pod_list %>
+#
+#      delete_pods:
+#        action: kubernetes.k8saction
+#        input:
+#          api_group: CoreV1Api
+#          action_name: delete_namespaced_pod
+#          params:
+#            namespace: <% $.namespace %>
+#            name: "environment-operator"
+#            body: {}
 
       check_eo_limits_is_exist:
         action: kubernetes.k8saction
